Bug 814778: Disable font inflation for the b2g master process. r=dbaron